[gd_scene load_steps=3 format=3 uid="uid://jyv4g54adkmo"]

[ext_resource type="Script" uid="uid://xiphbph8v88o" path="res://ui/overlays/pause_overlay.gd" id="1_q2yda"]
[ext_resource type="PackedScene" uid="uid://nbaodrlopo7y" path="res://ui/components/game_settings.tscn" id="2_n78uc"]

[node name="PauseOverlay" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2yda")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "game_paused"
horizontal_alignment = 1

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="GameSettings" parent="VBoxContainer3/SettingsContainer" instance=ExtResource("2_n78uc")]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer3/SettingsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "return_to_menu"

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "resume_game"

[node name="SettingsButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "settings"

[node name="ExitButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "leave_game"
